Prevent horizontal overflow on root elements

--- a/common/app/assets/stylesheets/base/_base.scss
+++ b/common/app/assets/stylesheets/base/_base.scss
@@ -14,6 +14,13 @@ body {
     background-color: #ffffff;
 }
 
+@if $old-ie == false {
+    html,
+    body {
+        overflow-x: hidden;
+    }
+}
+
 body:after {
     content: "mobile";
     @include u-h;
